# SM4-FileTransfer

./: CMakeLists.txt  README.md  client.c  receive_file.c  send_file.c  server.c  sm4.c
.cmake/api/v1/reply/: cache-v2-ed75524204977fc623e5.json  cmakeFiles-v1-d590f94f6cf53cfde8ce.json  codemodel-v2-9f84a5c166a2e4cc818c.json  index-2022-07-12T09-20-00-0633.json  target-receive_file-Debug-ff7d6e47304f1eb36227.json  target-send_file-Debug-2b3ff870fbafe1b5eff7.json  target-sm4-Debug-8912304f3c81e0a1fa3a.json
include/: file_utils.h  filecopy.h  get.h  messages.h  mmapFile.h  send.h  threadpool.h  transfer.h
include/gmssl/: sm4_file.h
include/miniz/: zip_walk.h
src/: connect.c  file_utils.c  get.c  messages.c  mmapFile.c  send.c  sm4_file.c  threadpool.c  transfer.c
src/gmssl/: sm4_common.c  sm4_enc.c  sm4_setkey.c
src/miniz/: zip.c
tools/: client.c  filetransfer.c  server.c  sm4.c
